--- a/deep-learning.html
+++ b/deep-learning.html
@@ -96,7 +96,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999697454914-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999697454914-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -171,11 +171,11 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aluperf.referrals.selectminds.com/jobs/bell-labs-internship-mobility-robustness-optimization-through-deep-reinforcement-learning-36253'>Bell Labs Internship - Mobility Robustness Optimization through Deep Reinforcement Learning - Nokia Careers</a></h5> 
+<h5><a href='https://aluperf.referrals.selectminds.com/jobs/bell-labs-internship-mobility-robustness-optimization-through-deep-reinforcement-learning-36253'>Bell Labs Internship - Mobility Robustness Optimization through Deep Reinforcement Learning - Nokia Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697330844-working-student-deep-learning-ai-computer-vision-data-management'>Bosch Group Working student Deep Learning - AI - Computer Vision - Data Management | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697330844-working-student-deep-learning-ai-computer-vision-data-management'>Bosch Group Working student Deep Learning - AI - Computer Vision - Data Management | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -183,7 +183,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light">San Francisco  San Francisco, California</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sertis/jobs/4475587002'>Job Application for Deep Learning Researcher at Sertis</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sertis/jobs/4475587002'>Job Application for Deep Learning Researcher at Sertis</a></h5> 
 <p><span class="badge badge-light">Bangkok</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -272,11 +272,11 @@ with a?...</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/6sbrdkwb94xno4uikwmox8f6yr'>Artificial Intelligence and Deep Learning Research Scientist (Ph.D. Candidates!) | CardinalHire</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/6sbrdkwb94xno4uikwmox8f6yr'>Artificial Intelligence and Deep Learning Research Scientist (Ph.D. Candidates!) | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wandb/3d5776dc-328e-4b31-ace5-ea22abb144ab'>Weights & Biases - Deep Learning Instructor</a></h5> 
+<h5><a href='https://jobs.lever.co/wandb/3d5776dc-328e-4b31-ace5-ea22abb144ab'>Weights & Biases - Deep Learning Instructor</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
@@ -288,7 +288,7 @@ with a?...</p>
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/oJY4afwF'>Samsung Semiconductor, Inc. Careers - Deep Learning Theory Researcher/ Scientist Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/oJY4afwF'>Samsung Semiconductor, Inc. Careers - Deep Learning Theory Researcher/ Scientist Intern</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
@@ -373,7 +373,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/instabase/jobs/4428023002'>Job Application for Senior Deep Learning Engineer at Instabase</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/instabase/jobs/4428023002'>Job Application for Senior Deep Learning Engineer at Instabase</a></h5> 
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
@@ -390,7 +390,7 @@ Skills at Crisalix.</p>
 <p>6 days ago ... Compute Performance Developer Technology Intern - CUDA | US, CA, Santa 
 Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/dmai/910b3672-d7de-4e74-ad2c-49700bbb71c1'>DMAI - Software Engineer, Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dmai/910b3672-d7de-4e74-ad2c-49700bbb71c1'>DMAI - Software Engineer, Deep Learning</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-09-08</p>
 <hr/>
